Paint scroll corner using ScrollbarTheme

Paint scroll corner using ScrollbarTheme for all scrollable areas. Note that we always
did that for the main frame, but RLS changes broke this.

Bug: 828808

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ib6270cd06ccf6b19db692a2d16ee21feba48f45a
Reviewed-on: https://chromium-review.googlesource.com/1042573
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Rob Buis <rbuis@igalia.com>
Cr-Commit-Position: refs/heads/master@{#559577}
Former-commit-id: 6c1ce7b951c1805995d522ce5a81020b8aae9edd